--- a/admi.css
+++ b/admi.css
@@ -1,3 +1,19 @@
+/* Reset de viewport y prevención de zoom involuntario */
+html {
+    -webkit-text-size-adjust: 100%;
+    -ms-text-size-adjust: 100%;
+    text-size-adjust: 100%;
+}
+
+* {
+    -webkit-tap-highlight-color: transparent;
+}
+
+/* Prevenir overflow horizontal */
+html, body {
+    max-width: 100vw;
+    overflow-x: hidden;
+}
 /* HERO CON VIDEO - IGUAL QUE INMOBILIARIA */
 .admin-hero {
     position: relative;
